--- a/criar_projeto.html
+++ b/criar_projeto.html
@@ -4,67 +4,7 @@
   <meta charset="utf-8" />
   <title>TeamBuilder — Criar Projeto (MVP)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root {
-      --bg: #fafafa;
-      --card: #fff;
-      --text: #111;
-      --muted: #666;
-      --border: #e6e6e6;
-      --primary: #4f46e5;
-      --primary-contrast: #fff;
-      --danger: #ef4444;
-      --pill: #f4f4f5;
-      --pill-border: #e4e4e7;
-      --hint-bg: #fff1f2;
-      --hint-text: #9f1239;
-      --success-bg: #ecfdf5;
-      --success-text: #065f46;
-    }
-    * { box-sizing: border-box; }
-    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; color: var(--text); background: radial-gradient(1200px 800px at 50% -100px, #ffe6ff66, transparent), var(--bg); }
-
-    .topbar { display: flex; align-items: center; justify-content: space-between; padding: 12px 16px; background: var(--card); border-bottom: 1px solid var(--border); }
-    .brand { font-weight: 700; }
-
-    .container { max-width: 920px; margin: 28px auto; padding: 0 16px; }
-
-    .page-title { text-align: center; margin-bottom: 18px; }
-    .page-title h1 { margin: 8px 0 4px; font-size: 24px; }
-    .page-title p { margin: 0; color: var(--muted); }
-
-    .card { background: var(--card); border: 1px solid var(--border); border-radius: 16px; padding: 20px; }
-
-    .field { margin-bottom: 16px; }
-    .label { display: block; font-weight: 600; margin-bottom: 8px; }
-    .hint { font-size: 12px; color: var(--muted); margin-top: 6px; }
-
-    .input, .textarea, .select { width: 100%; padding: 12px; border: 1px solid var(--border); border-radius: 12px; background: var(--card); font-size: 14px; }
-    .textarea { min-height: 150px; resize: vertical; }
-
-    .row { display: grid; gap: 10px; grid-template-columns: 1fr; }
-    @media (min-width: 760px) { .row.two { grid-template-columns: 1fr 220px; } }
-
-    .skill-actions { display: flex; gap: 8px; align-items: center; }
-    .btn { padding: 10px 14px; border: 1px solid var(--border); border-radius: 12px; background: var(--card); cursor: pointer; }
-    .btn:hover { background: #f7f7f7; }
-    .btn-primary { background: var(--primary); color: var(--primary-contrast); border-color: var(--primary); }
-    .btn-primary:hover { filter: brightness(0.95); }
-    .btn-danger { border-color: #fecaca; color: var(--danger); background: #fff; }
-
-    .skills-list { display: flex; flex-direction: column; gap: 8px; margin-top: 10px; }
-    .skill-item { display: flex; gap: 10px; align-items: center; justify-content: space-between; border: 1px dashed var(--pill-border); background: var(--pill); padding: 10px 12px; border-radius: 12px; }
-    .skill-item .meta { display: flex; gap: 10px; align-items: center; }
-    .chip { padding: 4px 8px; border-radius: 999px; background: #eef2ff; color: #3730a3; font-size: 12px; border: 1px solid #e0e7ff; }
-
-    .empty { display: grid; place-items: center; text-align: center; border-radius: 12px; border: 1px dashed var(--border); background: #fff7ed; color: #7c2d12; padding: 18px; font-size: 14px; }
-
-    .footer-actions { display: flex; gap: 10px; justify-content: center; margin-top: 18px; }
-
-    .alert { margin-top: 12px; padding: 10px 12px; border-radius: 12px; font-size: 14px; border: 1px solid transparent; display: none; }
-    .alert.error { display: block; background: #fff1f2; color: var(--hint-text); border-color: #ffe4e6; }
-    .alert.success { display: block; background: var(--success-bg); color: var(--success-text); border-color: #a7f3d0; }
-  </style>
+  <link rel="stylesheet" href="criar_projeto.css">
 </head>
 <body>
   <header class="topbar">
